# oncraft

./: .gitignore  CLAUDE.md  LICENSE  README.md  auto-imports.d.ts  components.d.ts  nuxt.config.ts  package.json  plan.md  pnpm-lock.yaml  spec.md  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml
app/: app.config.ts  app.vue  theme.ts
app/assets/: main.css  theme.css
app/components/: AgentProgressBar.vue  AppSplash.vue  CardContextMenu.vue  ChatMessage.vue  ChatPanel.vue  ChatSkeleton.vue  ColumnEditor.vue  ConsolePanel.vue  ContextGauge.vue  EditCardDialog.vue  EffortBar.vue  EmptyState.vue  ErrorBoundary.vue  ErrorNotice.vue  FilePickerInput.vue  FileViewer.vue  GenericMessageBlock.vue  GlobalSettings.vue  GlobalSettingsPage.vue  HomeScreen.vue  HookActivityBlock.vue  ImageAttachmentBar.vue  ImportSessionsDialog.vue  InputToolbar.vue  IssueSelector.vue  KanbanBoard.vue  KanbanCard.vue  KanbanColumn.vue  KanbanSkeleton.vue  MarkdownContent.vue  NewSessionDialog.vue  OnboardingWizard.vue  PipelineEditor.vue  ProjectInfoBar.vue  ProjectSettings.vue  PromptSuggestionBar.vue  RateLimitNotice.vue  SessionMetrics.vue  SlashCommandPalette.vue  StatusIndicator.vue  (+9 more)
app/composables/: useChatParts.ts  useFileViewer.ts  useImageAttachments.ts  useProjectActions.ts  (+2 more)
docs/: plan.md  spec.md
src/: App.vue  main.ts  theme.ts
src-sidecar/: agent-bridge.ts  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs
(+153 files in other folders)
